# liburi

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
m4/: Makefile.am
src/: Makefile.am  uri.c  uri.h
tests/: Makefile.am  check_liburi.c
